# drf-quick-start

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose-db.yml  docker-compose.yml  pyproject.toml  requirements_base.txt  requirements_dev.txt
fs_project/: manage.py
fs_project/account/: serializers.py  urls.py  views.py
fs_project/ext_user/: apps.py  filters.py  models.py  serializers.py  views.py
fs_project/ext_user/migrations/: 0001_initial.py
fs_project/fs_project/: asgi.py  custom_pagination.py  custom_permission.py  settings.py  urls.py  wsgi.py
src/: .env.example
src/account/: urls.py  views.py
src/common_check/: tasks.py  urls.py  views.py
src/ext_user/: admin.py  urls.py  views.py
src/fs_project/: asgi.py  celery.py  log_sender.py  logging_config.py  settings.py  urls.py
src/operation_log/: __init__.py  admin.py  apps.py  helpers.py  models.py  serializers.py  urls.py  views.py
src/operation_log/migrations/: 0001_initial.py
