[project]
name = "drf-quick-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "django>=6.0",
    "django-celery-beat>=2.1.0",
    "django-celery-results>=2.6.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "mysqlclient>=2.2.7",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "drf-spectacular>=0.29.0",
]
